Fix password hint wording

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <div id="lock-screen">
     <div class="lock-box">
         <h2>Access Protected</h2>
-        <p class="lock-hint">This resume is for the Mistral AI competition review.<br>Please enter your Discord username used in the application (all lowercase).</p>
+        <p class="lock-hint">This resume is for the Mistral AI competition review.<br>Please enter my Discord username used in the application (all lowercase).</p>
         <input type="password" id="pw-input" placeholder="Enter password" autocomplete="off">
         <button id="pw-btn">Unlock</button>
         <p class="lock-error" id="pw-error">Incorrect password. Please try again.</p>
